added file writer and key hashing funcs

--- a/src/caesar_cipher/CMakeLists.txt
+++ b/src/caesar_cipher/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(${TARGET} SHARED src/caesar_cipher.cpp)
 target_include_directories(${TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
 
-target_link_libraries(${TARGET} STRING_OPS)
+target_link_libraries(${TARGET} STRING_OPS GENERATORS)
