added executables, fixed hash storage

--- a/executables/caesar_cipher/CMakeLists.txt
+++ b/executables/caesar_cipher/CMakeLists.txt
@@ -1,6 +1,8 @@
-set(TARGET CAESAR_TEST)
-add_executable(${TARGET} caesar_encrypt.cpp)
-add_executable(${TARGET} caesar_decrypt.cpp)
+set(TARGET_ENCRYPT encrypt_caesar)
+set(TARGET_DECRYPT decrypt_caesar)
 
+add_executable(${TARGET_ENCRYPT} caesar_encrypt.cpp)
+add_executable(${TARGET_DECRYPT} caesar_decrypt.cpp)
 
-target_link_libraries(${TARGET} PUBLIC CAESAR_LIB)
+target_link_libraries(${TARGET_ENCRYPT} PUBLIC CAESAR_LIB)
+target_link_libraries(${TARGET_DECRYPT} PUBLIC CAESAR_LIB)
