updated README.md, installed bins still broken

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ else()
   message(FATAL_ERROR "OpenSSL not found: ${OPENSSL_VERSION}")
 endif()
 
-
+set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install")
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/src")
 
 include_directories(inc)
 add_subdirectory(libs)
