created abstracted file operations library

--- a/libs/file_ops/CMakeLists.txt
+++ b/libs/file_ops/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TARGET GENERATORS)
+set(TARGET FILE_OPS)
 
-add_library(${TARGET} STATIC src/generators.cpp)
+add_library(${TARGET} STATIC src/file_ops.cpp)
 target_include_directories(${TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
