--- a/inc/symmetric_encryption/CMakeLists.txt
+++ b/inc/symmetric_encryption/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library(${TARGET} STATIC src/caesar_cipher.cpp)
 target_include_directories(${TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
 
 
-target_link_libraries(${TARGET} STRING_OPS FILE_OPS OpenSSL::Crypto)
+target_link_libraries(${TARGET} STRING_OPS GENERATORS OpenSSL::Crypto)
